# aegis-ai

./: .gitignore  README.md  index.html  package.json  tailwind.config.js  vite.config.js
backend/: .env.example  analysis_report.py  langgraph_pipeline.py  main.py  mcp_pipeline.py  mcp_server.py  models.py  pyproject.toml  requirements.txt  setup_db.py  threat_intel.db
backend/crew/: aegis_crew.py  crew.py
backend/crew/config/: agents.yaml  tasks.yaml
backend/crew/tools/: __init__.py  content_tools.py  url_tools.py
docs/: LangGraph_Implementation_Report.md  LangGraph_Implementation_Report.tex
src/: App.jsx  index.css
src/components/: Footer.jsx  Navbar.jsx  RiskGauge.jsx  ThreatReport.jsx
src/pages/: DashboardPage.jsx  HistoryPage.jsx  HomePage.jsx
src/utils/: mockAnalysis.js  storage.js
