[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "crewai-tools[mcp]>=1.14.3",
    "crewai[litellm]>=0.70.0",
    "fastapi>=0.115.0",
    "langchain-core>=1.3.3",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "langsmith>=0.1.0",
    "litellm>=1.0.0",
    "openai>=1.0.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "requests>=2.32.0",
    "uvicorn[standard]>=0.32.0",
]
